package view;

import javax.swing.*;
import java.awt.*;

public class SimulationView extends JFrame {
    SimulationView() {
        super();
        super.setPreferredSize(new Dimension(800, 400));
        super.setVisible(true);
    }
}
